newclay/test/Compiler/StaticEvaluator/Fail/AliasRecursion1/main.clay
alias x = y;
alias y = x;

#Main() = x;
